# cpp-template-repository

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  foo.cxx  main.cpp  main.cxx
.github/workflows/: pre-commit.yml  static-code-analysis-cpp.yml
scripts/: commit.sh  configure.sh  install_static_analysis_tools.sh  make_debug.sh  push.sh  run_all_hooks.sh
